# tauri-react-i18n-darkmode-starter

./: .gitignore  LICENSE  README.md  README.zh.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  test.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/bindings/: greet_response.ts
src/components/: CustomTitleBar.tsx
src/components/ui/: sidebar.tsx  sonner.tsx  tabs.tsx
src/lib/: i18n.ts
src/locales/: en.json  zh.json
src/pages/: Demo.tsx  Home.tsx
