[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
ts-rs = "10.0"
tauri = { version = "2.2.4", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
